--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     </div>
 
     <footer>
-        &copy; 2026 Ankush Yadav. Future Scientist in making.
+        &copy; 2026 Ankush Yadav. Future Scientists in making.
     </footer>
 
     <script>
