--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </div>
                 <div class="info-item">
                     <h3>School</h3>
-                    <span>M.S.R Saini School</span>
+                    <span>M.S.R Sainik School,khagaria</span>
                 </div>
             </div>
         </div>
