--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="bio-row"><strong>Father:</strong> Amit Kumar</div>
             <div class="bio-row"><strong>Mother:</strong> Rani Devi</div>
             <div class="bio-row"><strong>Class:</strong> 2nd Standard</div>
-            <div class="bio-row"><strong>School:</strong> M.S.R. Saini School</div>
+            <div class="bio-row"><strong>School:</strong> M.S.R. Sainik School</div>
         </div>
 
         <div class="files-area">
@@ -204,7 +204,7 @@
     <div class="footer">
         <div class="address-box">
             <span class="address-title">📍 CONTACT ADDRESS</span>
-            At.- Gadhbanni, P.O- Goriyami<br>
+            At.- Gadhbanni, P.O- hathwan<br>
             P.S.- Alouli, District.- Khagaria<br>
             Bihar, India
         </div>
