--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div class="footer">
         <div class="address-box">
             <span class="address-title">📍 CONTACT ADDRESS</span>
-            At.- Gadhbanni, P.O- Goriyami<br>
+            At.- Gadhbanni, P.O- Hathwan<br>
             P.S.- Alouli, District.- Khagaria<br>
             Bihar, India
         </div>
